--- a/crates/zizmor/tests/integration/test-data/overprovisioned-secrets.yml
+++ b/crates/zizmor/tests/integration/test-data/overprovisioned-secrets.yml
@@ -8,6 +8,7 @@ jobs:
   test:
     name: test
     runs-on: ubuntu-latest
+    environment: foobar
     steps:
       - run: echo "${stuff} ${otherstuff} ${morestuff}"
         env:
