--- a/crates/zizmor/tests/integration/test-data/unredacted-secrets.yml
+++ b/crates/zizmor/tests/integration/test-data/unredacted-secrets.yml
@@ -10,6 +10,7 @@ jobs:
   test:
     name: test
     runs-on: ubuntu-latest
+    environment: foobar
     steps:
       - run: echo "${stuff} ${otherstuff}"
         env:
@@ -18,4 +19,3 @@ jobs:
 
           # NOT OK: potentially leaves 'field' within 'otherstuff' unredacted in the runner's logs
           otherstuff: ${{ fromJson(secrets.otherstuff).field }}
-
