--- a/crates/zizmor/tests/integration/test-data/cache-poisoning/publisher-step.yml
+++ b/crates/zizmor/tests/integration/test-data/cache-poisoning/publisher-step.yml
@@ -11,6 +11,8 @@ jobs:
   publish:
     name: publish
     runs-on: macos-latest
+    environment: foobar
+
     steps:
       - name: Project Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
