--- a/crates/zizmor/tests/integration/test-data/use-trusted-publishing/cargo-publish.yml
+++ b/crates/zizmor/tests/integration/test-data/use-trusted-publishing/cargo-publish.yml
@@ -7,6 +7,7 @@ jobs:
     name: publish-1
     runs-on: ubuntu-latest
     permissions: {}
+    environment: crates.io
     steps:
       - name: vulnerable-1
         run: cargo publish
