Implement superfluous-actions (#1618)
* Implement superfluous-actions

Signed-off-by: William Woodruff <william@yossarian.net>

* Bump schema

Signed-off-by: William Woodruff <william@yossarian.net>

* Bump snapshots

Signed-off-by: William Woodruff <william@yossarian.net>

* Initial snapshot tests

Signed-off-by: William Woodruff <william@yossarian.net>

* Docs

Signed-off-by: William Woodruff <william@yossarian.net>

* Tweak personas

Signed-off-by: William Woodruff <william@yossarian.net>

* Bump crater tests

Signed-off-by: William Woodruff <william@yossarian.net>

* Another crater test

Signed-off-by: William Woodruff <william@yossarian.net>

* Record changes

Signed-off-by: William Woodruff <william@yossarian.net>

---------

Signed-off-by: William Woodruff <william@yossarian.net>

--- a/crates/zizmor/tests/integration/test-data/cache-poisoning/publisher-step.yml
+++ b/crates/zizmor/tests/integration/test-data/cache-poisoning/publisher-step.yml
@@ -27,7 +27,7 @@ jobs:
         run: cargo xtasks darwin-build
 
       - name: Publish draft release on Github
-        uses: softprops/action-gh-release@01570a1f39cb168c169c802c3bceb9e93fb10974
+        uses: softprops/action-gh-release@01570a1f39cb168c169c802c3bceb9e93fb10974 # zizmor: ignore[superfluous-actions]
         with:
           name: ${{ steps.build.outputs.version }}
           tag_name: ${{ steps.build.outputs.version }}
